# QNote

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  install-as-notepad.ps1  uninstall-as-notepad.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
installer/: QNote.iss
scripts/: README.md  build.bat  release.bat
src/: Editor.h  MainWindow.cpp  Settings.h  resource.h  resource.rc
src/app/: MainWindow.cpp  MainWindow.h  MainWindowEdit.cpp  MainWindowFile.cpp  MainWindowNotes.cpp  MainWindowPrint.cpp  MainWindowTabs.cpp  MainWindowTools.cpp  MainWindowUI.cpp  MainWindowView.cpp  main.cpp
src/core/: FileIO.cpp  FileIO.h  NoteStore.cpp  NoteStore.h  Settings.cpp  Settings.h  SpellChecker.cpp  SpellChecker.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/resources/: QNote.exe.manifest  resource.h  resource.rc
src/ui/: CaptureWindow.cpp  CaptureWindow.h  CharacterMap.cpp  CharacterMap.h  ClipboardHistory.cpp  ClipboardHistory.h  Dialogs.cpp  Dialogs.h  DocumentManager.cpp  DocumentManager.h  Editor.cpp  Editor.h  EditorLineOps.cpp  EditorSearch.cpp  EditorSubclass.cpp  FindBar.cpp  FindBar.h  LineNumbersGutter.cpp  LineNumbersGutter.h  NoteListWindow.cpp  NoteListWindow.h  PrintPreviewWindow.cpp  PrintPreviewWindow.h  SettingsWindow.cpp  SettingsWindow.h  TabBar.cpp  TabBar.h  TabBarInteraction.cpp  TabBarPaint.cpp
website/: download.html  index.html  more.html  source.html  styles.css
